--- a/app/src/templates/chat/chat.html
+++ b/app/src/templates/chat/chat.html
@@ -33,7 +33,7 @@
           socket.disconnect();
 
           // go back to the login page
-          window.location.href = "{{ url_for('main.index') }}";
+          window.location.href = "{{ url_for('chat.index') }}";
         });
       }
     </script>
